nuevos numeros comprados

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         
         .number-available {
             background: #26de81;
-            color: white;
+            color: #F5F5F5;
             border-color: #20bf6b;
         }
         
@@ -332,7 +332,7 @@
     <script>
         // Números apartados (no cancelados)
         const numerosApartados = [5, 14, 19, 21, 26, 27, 29, 49, 59, 85, 89];
-        const numerosCancelados = []; // Ejemplo: [12, 34, 56]
+        const numerosCancelados = [88]; // Ejemplo: [12, 34, 56]
 
         document.getElementById('apartados').textContent = numerosApartados. length
         document.getElementById('disponibles').textContent = 100 - numerosApartados.length - numerosCancelados.length;
