--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <script>
         // Números apartados (no cancelados)
-        const numerosApartados = [5, 11, 14, 19, 21, 26, 27, 28, 29, 49, 59, 85, 89];
+        const numerosApartados = [5, 11, 14, 19, 21, 26, 27, 28, 29, 39, 49, 59, 85, 89];
         const numerosCancelados = [88]; // Ejemplo: [12, 34, 56]
 
         document.getElementById('apartados').textContent = numerosApartados. length
