1numero vendido y otros apartados

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
 
     <script>
         // Números apartados (no cancelados)
-        const numerosApartados = [5, 11, 14, 19, 21, 26, 27, 28, 29, 39, 49, 59, 85, 89];
-        const numerosCancelados = [88]; // Ejemplo: [12, 34, 56]
+        const numerosApartados = [5, 8, 11, 14, 18, 19, 21, 23, 26, 27, 28, 29, 39, 49, 53, 59, 85, 89];
+        const numerosCancelados = [65, 88]; // Ejemplo: [12, 34, 56]
 
         document.getElementById('apartados').textContent = numerosApartados. length
         document.getElementById('disponibles').textContent = 100 - numerosApartados.length - numerosCancelados.length;
