--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <script>
         // Números apartados (no cancelados)
-        const numerosApartados = [5, 8, 11, 14, 18, 19, 21, 23, 26, 27, 28, 29, 39, 49, 53, 59, 85, 89];
+        const numerosApartados = [1, 4, 5, 8, 11, 14, 15, 18, 19, 21, 23, 25, 26, 27, 28, 29, 39, 49, 53, 54, 59, 63, 83, 85, 89];
         const numerosCancelados = [65, 88]; // Ejemplo: [12, 34, 56]
 
         document.getElementById('apartados').textContent = numerosApartados. length
