--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <script>
         // Números apartados (no cancelados)
-        const numerosApartados = [1, 3, 4, 5, 8, 11, 14, 15, 18, 21, 23, 25, 26, 29, 35, 39, 53, 54, 63, 66, 79, 83, 89, 93];
+        const numerosApartados = [1, 3, 4, 5, 8, 11, 14, 15, 18, 21, 23, 25, 26, 29, 30, 35, 39, 53, 54, 63, 66, 79, 83, 89, 93];
         const numerosCancelados = [16, 19, 27, 28, 49, 59, 65, 85, 88]; // Ejemplo: [12, 34, 56]
 
         document.getElementById('apartados').textContent = numerosApartados. length
