--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
     <script>
         // Números apartados (no cancelados)
-        const numerosApartados = [1, 3, 4, 5, 6, 8, 11, 13, 14, 15, 16, 18, 19, 21, 23, 25, 26, 27, 28, 29, 30, 31, 35, 39, 49, 52, 53, 54, 59, 63, 65, 66, 67, 69, 79, 83, 84, 85, 88, 89, 93];
+        const numerosApartados = [1, 3, 4, 5, 6, 7, 8, 11, 13, 14, 15, 16, 17, 18, 19, 21, 23, 25, 26, 27, 28, 29, 30, 31, 33, 35, 38, 39, 41, 45, 46, 48, 49, 52, 53, 54, 56, 57, 59, 63, 65, 66, 67, 69, 79, 83, 84, 85, 88, 89, 93];
         const numerosCancelados = [];
 
         document.getElementById('apartados').textContent = numerosApartados. length
